--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   google_fonts: ^6.2.1
   stylish_bottom_bar: ^1.1.0
   http: ^1.2.1
+  image_picker: ^1.1.1
 
 dev_dependencies:
   flutter_test:
