--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   stylish_bottom_bar: ^1.1.0
   http: ^1.2.1
   image_picker: ^1.1.1
+  sqflite: ^2.3.3+1
+  path_provider: ^2.1.3
+  path: ^1.9.0
+  google_maps_flutter: ^2.6.1
 
 dev_dependencies:
   flutter_test:
